force-app/main/default/objects/Peer_Review_Checklist__c/Peer_Review_Checklist__c.object-meta.xml
<CustomObject>
    <label>Peer Review Checklist</label>
    <nameField>
        <label>Peer Review Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peer Review Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>