force-app/main/default/objects/Peer_Review_Checklist__c/fields/Address_of_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Reviewer__c</fullName>
    <label>Address of Reviewer</label>
    <type>TextArea</type>
</CustomField>