force-app/main/default/objects/Peer_Review_Checklist__c/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <label>Collaboration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>