force-app/main/default/objects/Peer_Review_Checklist__c/fields/Data_Management_and_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Data_Management_and_Sharing__c</fullName>
    <label>Data Management and Sharing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>