force-app/main/default/objects/Peer_Review_Checklist__c/fields/Feasibility_of_Project_and_Research__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_of_Project_and_Research__c</fullName>
    <inlineHelpText>FEASIBILITY OF PROJECT AND RESEARCH VISION</inlineHelpText>
    <label>Feasibility of Project and Research</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>