force-app/main/default/objects/Peer_Review_Checklist__c/fields/Feedback_to_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_Applicants__c</fullName>
    <label>Feedback to Applicants</label>
    <type>TextArea</type>
</CustomField>