force-app/main/default/objects/Peer_Review_Checklist__c/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grants</label>
    <referenceTo>Grants__c</referenceTo>
    <relationshipLabel>Peer Review Checklists</relationshipLabel>
    <relationshipName>Peer_Review_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>