force-app/main/default/objects/Peer_Review_Checklist__c/fields/Institutional_Support__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Support__c</fullName>
    <label>Institutional Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>