force-app/main/default/objects/Peer_Review_Checklist__c/fields/Name_of_Lead_PI__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Lead_PI__c</fullName>
    <label>Name of Lead PI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>