force-app/main/default/objects/Peer_Review_Checklist__c/fields/Name_of_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Reviewer__c</fullName>
    <label>Name of Reviewer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>