force-app/main/default/objects/Peer_Review_Checklist__c/fields/Potential_Conflicts_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Potential_Conflicts_of_Interest__c</fullName>
    <inlineHelpText>Please use this space to share any potential conflicts of interest</inlineHelpText>
    <label>Potential Conflicts of Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>