force-app/main/default/objects/Peer_Review_Checklist__c/fields/Project_Compititive__c.field-meta.xml
<CustomField>
    <fullName>Project_Compititive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Compititive</label>
    <type>Checkbox</type>
</CustomField>