force-app/main/default/objects/Peer_Review_Checklist__c/fields/Project_Excellent__c.field-meta.xml
<CustomField>
    <fullName>Project_Excellent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Excellent</label>
    <type>Checkbox</type>
</CustomField>