force-app/main/default/objects/Peer_Review_Checklist__c/fields/Project_Not_Supportable__c.field-meta.xml
<CustomField>
    <fullName>Project_Not_Supportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Not Supportable</label>
    <type>Checkbox</type>
</CustomField>