force-app/main/default/objects/Peer_Review_Checklist__c/fields/Project_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Project_Outstanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Outstanding</label>
    <type>Checkbox</type>
</CustomField>