force-app/main/default/objects/Peer_Review_Checklist__c/fields/Project_Satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Project_Satisfactory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Satisfactory</label>
    <type>Checkbox</type>
</CustomField>