force-app/main/default/objects/Peer_Review_Checklist__c/fields/Research_Involving_Human_Participation__c.field-meta.xml
<CustomField>
    <fullName>Research_Involving_Human_Participation__c</fullName>
    <label>Research Involving Human Participation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>