force-app/main/default/objects/Peer_Review_Checklist__c/fields/Research_on_Animals__c.field-meta.xml
<CustomField>
    <fullName>Research_on_Animals__c</fullName>
    <label>Research on Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>