force-app/main/default/objects/Peer_Review_Checklist__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <label>Resources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Cannot Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>