force-app/main/default/objects/Peer_Review_Checklist__c/fields/Summarise_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Summarise_Ratings__c</fullName>
    <label>Summarise Ratings</label>
    <type>TextArea</type>
</CustomField>