force-app/main/default/objects/Peer_Review_Checklist__c/fields/Team_Compititive__c.field-meta.xml
<CustomField>
    <fullName>Team_Compititive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Compititive</label>
    <type>Checkbox</type>
</CustomField>