force-app/main/default/objects/Peer_Review_Checklist__c/fields/Team_Excellent__c.field-meta.xml
<CustomField>
    <fullName>Team_Excellent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Excellent</label>
    <type>Checkbox</type>
</CustomField>