force-app/main/default/objects/Peer_Review_Checklist__c/fields/Team_Not_Supportable__c.field-meta.xml
<CustomField>
    <fullName>Team_Not_Supportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Not Supportable</label>
    <type>Checkbox</type>
</CustomField>