force-app/main/default/objects/Peer_Review_Checklist__c/fields/Team_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Team_Outstanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Outstanding</label>
    <type>Checkbox</type>
</CustomField>