force-app/main/default/objects/Peer_Review_Checklist__c/fields/Team_Satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Team_Satisfactory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Satisfactory</label>
    <type>Checkbox</type>
</CustomField>