force-app/main/default/objects/Peer_Review_Checklist__c/fields/Time_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Time_Commitment__c</fullName>
    <label>Time Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>