force-app/main/default/objects/Peer_Review_Checklist__c/fields/Track_Record_of_the_Team__c.field-meta.xml
<CustomField>
    <fullName>Track_Record_of_the_Team__c</fullName>
    <inlineHelpText>SCIENTIFIC AND LEADERSHIP TRACK RECORD OF THE TEAM</inlineHelpText>
    <label>Track Record of the Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>