force-app/main/default/objects/Peer_Review_Checklist__c/fields/Why_the_Resources_not_Appropriate__c.field-meta.xml
<CustomField>
    <fullName>Why_the_Resources_not_Appropriate__c</fullName>
    <inlineHelpText>If no, please explain why the request for resources is not appropriate</inlineHelpText>
    <label>Why the Resources not Appropriate</label>
    <type>TextArea</type>
</CustomField>